Pic address changed

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
     <h1>DHRUV'S PERSONAL WEBSITE</h1>
     <table cellspacing="20">
-        <td><img src="E:\WEB DEV ANGELA YU\VS CODE PROJECTS\HTML - Personal Site\RAJ_3373-modified.png" alt="Dhruv goyal Image" height="244" width="244"> </td>
+        <td><img src="Dhruv.png" alt="Dhruv goyal Image" height="244" width="244"> </td>
         <td><em><p> Love for tech and coding is more than need for oxygen 🔥</p></em>
             <p> <strong> I am a passionate programmer and a all time hustler </strong></p> </td>
     </table>
